--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -184,6 +184,14 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/libs/PyroFishingPro-4.9.1.jar</systemPath>
 		</dependency>
+    <!-- Erenos -->
+    <dependency>
+      <groupId>net.aerulion</groupId>
+      <artifactId>erenos</artifactId>
+      <version>2.3.127-SNAPSHOT</version>
+      <classifier>dev</classifier>
+      <scope>provided</scope>
+    </dependency>
 	</dependencies>
 	<repositories>
 		<repository>
