[corp] Add mvn repository for erenos, use erenos 2.3.136, add "-CORP" to version
https://github.com/Corpium/Corpium/issues/28

--- a/pom.xml
+++ b/pom.xml
@@ -188,7 +188,7 @@
     <dependency>
       <groupId>net.aerulion</groupId>
       <artifactId>erenos</artifactId>
-      <version>2.3.127-SNAPSHOT</version>
+      <version>2.3.136</version>
       <classifier>dev</classifier>
       <scope>provided</scope>
     </dependency>
@@ -231,8 +231,13 @@
 			<id>bg-repo</id>
 			<url>https://repo.bg-software.com/repository/api/</url>
 		</repository>
+		<!-- you need to add a <server> with id "github-packages" and username/password in .m2/settings.xml settings.servers -->
+		<repository>
+			<id>github-packages</id>
+			<url>https://maven.pkg.github.com/aerulion/erenos</url>
+		</repository>
 		<!-- MyPet -->
-		<!--<repository> <id>mypet-repo</id> <url>https://repo.mypet-plugin.de/</url> 
+		<!--<repository> <id>mypet-repo</id> <url>https://repo.mypet-plugin.de/</url>
 			</repositor> -->
 	</repositories>
 	<!-- Builds Plugin -->
